--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: location-analytics
+    name: urban-analytics
     env: python
     region: oregon
     plan: free
@@ -9,4 +9,4 @@ services:
     startCommand: streamlit run app.py --server.port=$PORT --server.address=0.0.0.0 --server.headless=true
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.16
+        value: 3.11.0
