--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas==2.2.0
 numpy==1.26.3
-geopandas==0.14.2
+geopandas==0.14.3
 shapely==2.0.2
 duckdb==0.10.0
 h3==3.7.6
@@ -9,3 +9,4 @@ streamlit==1.30.0
 streamlit-folium==0.16.0
 plotly==5.18.0
 pyarrow==15.0.0
+fiona==1.9.5
